--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-gapi": "^1.0.2",
+    "react-google-login": "^5.2.2",
+    "react-kakao-login": "^2.1.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
