--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-gapi": "^1.0.2",
