--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.7",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
