--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.7",
     "recharts": "^2.2.0",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
