--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-daum-postcode": "^3.1.1",
@@ -22,8 +23,10 @@
     "react-scripts": "^5.0.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.7",
+    "react-stompjs": "^0.5.3",
     "recharts": "^2.2.0",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
