--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "net": "^1.0.2",
     "react": "^18.2.0",
